--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.0.4",
     "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/core": "^0.3.45",
+    "@langchain/google-genai": "^0.2.4",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -42,6 +43,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.3.0",
     "github": "^14.0.0",
+    "langchain": "^0.3.23",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
